# garlic

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  prj.conf  west.yml
app/boards/: nrf52dk_nrf52832.overlay
app/cmake/: check_symbol.cmake  run_clang_format.cmake
app/include/: circular_buffer.h  uart_dma.h
app/src/: CMakeLists.txt  main.c
app/src/app/: CMakeLists.txt  README.md  main.c
app/src/app/examples/: blinky_only.c  main_simple.c  minimal_blink.c  test_minimal_boot.c  test_uart_basic.c  test_uart_simple.c  test_with_rtt.c  uart_pin_test.c  uart_polling_simple.c  uart_simple_test.c
app/src/app/inc/: app_runtime.h  ble_runtime.h  uart_runtime.h
app/src/app/src/: app_runtime.c  ble_runtime.c  uart_runtime.c
app/src/commands/: CMakeLists.txt  README.md
app/src/commands/ble_ctrl/: CMakeLists.txt
app/src/commands/ble_ctrl/inc/: ble_ctrl.h
app/src/commands/ble_ctrl/src/: ble_ctrl.c
app/src/commands/core/: CMakeLists.txt
app/src/commands/core/src/: system_iface_zephyr.c
app/src/commands/echo/: CMakeLists.txt
app/src/commands/echo/src/: echo.c
app/src/commands/flash_read/: CMakeLists.txt
app/src/commands/flash_read/src/: flash_read.c
app/src/commands/git_version/: CMakeLists.txt
app/src/commands/git_version/inc/: git_version.h
app/src/commands/git_version/src/: git_version.c
app/src/commands/i2c/: CMakeLists.txt  README.md
app/src/commands/i2c/src/: i2c_cmd.c
app/src/commands/inc/: command.h  ids.h  register_all.h  system_iface.h
app/src/commands/reboot/: CMakeLists.txt
app/src/commands/reboot/src/: reboot.c
app/src/commands/src/: register_all.c  registry.c
app/src/commands/tmp119/: CMakeLists.txt
app/src/commands/tmp119/src/: tmp119_cmd.c
app/src/commands/uptime/: CMakeLists.txt
app/src/commands/uptime/src/: uptime.c
app/src/drivers/: CMakeLists.txt  README.md
app/src/drivers/ble_nus/: README.md
app/src/drivers/ble_nus/inc/: ble_nus.h
app/src/drivers/ble_nus/src/: ble_nus.c
app/src/drivers/i2c/: README.md
app/src/drivers/i2c/inc/: i2c.h
app/src/drivers/i2c/src/: i2c.c
app/src/drivers/i2c_async/inc/: i2c_async.h
app/src/drivers/i2c_async/src/: i2c_async.c
app/src/drivers/tmp119/: README.md
app/src/drivers/tmp119/inc/: tmp119.h
app/src/drivers/tmp119/src/: tmp119.c
app/src/drivers/uart/: README.md
app/src/drivers/uart/inc/: uart.h  uart_test.h
app/src/drivers/uart/src/: uart_dma.c
app/src/drivers/uart_dma/: CMakeLists.txt
app/src/drivers/uart_dma/inc/: uart_dma.h
app/src/drivers/uart_dma/src/: uart_dma.c
app/src/proto/: CMakeLists.txt  README.md  crc32.c  transport.c
app/src/proto/inc/: crc32.h  transport.h
app/src/stack/: CMakeLists.txt  README.md
app/src/stack/cmd_transport/: CMakeLists.txt
app/src/stack/cmd_transport/inc/: cmd_transport.h
app/src/stack/cmd_transport/src/: cmd_transport.c
app/src/utils/: CMakeLists.txt  README.md
app/src/utils/assert/: CMakeLists.txt
app/src/utils/assert/inc/: project_assert.h
app/src/utils/assert/src/: project_assert.c
app/src/utils/circular_buffer/: CMakeLists.txt
app/src/utils/circular_buffer/inc/: circular_buffer.h
app/src/utils/circular_buffer/src/: circular_buffer.c
docs/: 0-0-INTRODUCTION.md  0-1-DEV-TOOLS.md  1-0-TROUBLESHOOTING.md  2-0-PROTOCOL.md  AI_AGENT_GUIDE.md  PROTOCOL.md
scripts/: all.sh  ble_temp_stream.py  build.sh  check_format.sh  fix-terminal-freeze.sh  fix-usb-hanging.sh  fix-usb.sh  fix_format.sh  flash-quick.sh  flash.sh  format.sh  monitor.sh  rtt_capture.py  rtt_capture.sh  rtt_monitor.py  setup.sh  source.sh  test_dma_uart.py  test_integration.sh  test_uart_direct.py  test_uart_polling.py  uart_capture.py
scripts/legacy/: README.md  rtt_monitor.py  test_dma_uart.py  test_uart_direct.py  test_uart_polling.py
tests/integration/: conftest.py  requirements.txt  test_ble.py  test_ble_ctrl.py  test_commands.py  test_rtt_boot.py  test_tmp119.py  test_uart_basic.py
tests/integration/fixtures/: __init__.py  ble_io.py  command.py  probe.py  rtt.py  serial_io.py  transport.py
tests/unit/: CMakeLists.txt  test_circular_buffer.cpp  test_tmp119_commands.cpp  test_tmp119_init.cpp
tests/unit/command/: test_ble_ctrl.cpp  test_command_core.cpp  test_glue.cpp  test_glue_more.cpp  test_handlers.cpp  test_tmp119_commands.cpp
tests/unit/command/stubs/: ble_nus_stub.c  reboot_stub.c  system_iface_stub.c
tests/unit/drivers/tmp119/: test_tmp119_init.cpp
tests/unit/misc/: test_build_info.cpp
tests/unit/mocks/: i2c_async_mock.c  project_assert_stub.c
tests/unit/transport/: test_crc32.cpp  test_transport_api.cpp  test_transport_edges.cpp  test_transport_encode.cpp  test_transport_handle.cpp  test_transport_parse.cpp
tests/unit/uart_dma/: test_uart_dma.cpp  test_uart_dma_tx.cpp
tests/unit/utils/: test_circular_buffer.cpp
